--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -1,4 +1,3 @@
-/* Sidebar.module.css */
 .sidebar {
     width: 250px;
     background-color: #f9fafd;
@@ -35,10 +34,10 @@
     cursor: pointer;
   }
   
-  /* .menuItem.active {
+  .menuItem:hover {
     color: #2e2e62;
     font-weight: bold;
-  } */
+  }
   
   .icon {
     margin-right: 10px;
