--- a/src/components/card/Card.module.css
+++ b/src/components/card/Card.module.css
@@ -4,6 +4,9 @@
     border-radius: 20px;
     cursor: pointer;
     width: auto;
+    font-family: 'Arial', sans-serif;
+    font-size: medium;
+    color: rgb(40, 40, 91);
 }
 .backgroundColor:hover{
     background-color: rgb(43, 43, 160);
@@ -15,5 +18,12 @@
 }
 .headingText{
 font-weight: bold;
+font-size:11px;
 margin-right: 5px;
+}
+.time{
+    font-size:11px; 
+}
+.name{
+    font-size:11px;
 }
