--- a/src/components/DashboardMainContent/DashboardOverview/HealthStatusCards/HealthStatusCards.module.css
+++ b/src/components/DashboardMainContent/DashboardOverview/HealthStatusCards/HealthStatusCards.module.css
@@ -23,3 +23,9 @@
 .date:hover{
     color: white;
 }
+
+@media screen and (max-width: 425px) {
+    .cardBackground{
+        margin: 15px;
+    }
+}
