--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,55 @@
     margin: 0;
     padding: 0;
 }
+.container {
+    display: flex;
+    height: 100vh;
+  }
+  
+  .sidebar {
+    width: 18%;
+    height: 100%;
+  }
+  
+  .overview {
+    width: 39%;
+  }
+  
+  .rightPanel {
+    width: 43%;
+    background-color: #f9fafd;
+    padding: 0px;
+  }
+  
+  .rightContent {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  @media screen and (max-width: 480px) {
+    .container {
+      flex-direction: column;
+      height: auto;
+    }
+  
+    .sidebar,
+    .overview,
+    .rightPanel {
+      width: 100%;
+      height: auto;
+      margin: 10px;
+    }
+  
+    .overview {
+      order: 2;
+    }
+  
+    .rightPanel {
+      order: 3;
+    }
+  
+    .sidebar {
+      order: 1;
+    }
+  }
+  
