--- a/src/components/DashboardMainContent/DashboardOverview/DashboardOverview.module.css
+++ b/src/components/DashboardMainContent/DashboardOverview/DashboardOverview.module.css
@@ -26,6 +26,13 @@
     padding-top: 15px;
     margin: 0 20px 10px 0;
   }
+  .thisWeek{
+    color: rgb(40,40,91);
+    font-family: Arial, sans-serif;
+    font-size: 9px;
+    font-weight: bold;
+    text-align: right;
+  }
   
   @media screen and (max-width: 425px) {
     .overviewWrapper {
@@ -43,4 +50,23 @@
     .dashboardContainer{
         margin: 10px;
     }
+  }
+  @media screen  and (min-width:400px ) and (max-width: 768px){
+    .pageTitle {
+        margin-top: 10px;
+    }
+  
+    
+      .healthStatusContainer {
+        padding: 10px;
+        width: 40%;
+      }
+    
+      .pageTitle {
+        font-size: 18px;
+        margin: 10px;
+      }
+      .dashboardContainer{
+          margin: 10px;
+      }
   }
