--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -28,3 +28,8 @@
       width: 90%;
     }
   }
+  @media screen  and (min-width:400px ) and (max-width: 768px){
+    .searchContainer{
+      width: 100%;
+    }
+  }
