--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -5,7 +5,7 @@
   font-family: 'Arial', sans-serif;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 100vh;
 }
 
 .logo {
@@ -57,6 +57,46 @@
 }
 
 @media screen and (max-width: 425px) {
+  .sidebar {
+    position: fixed;
+    top: 0;
+    left: -200px;
+    height: 100vh;
+    width: 150px;
+    z-index: 1000;
+    background-color: #f9fafd;
+    transition: left 0.3s ease-in-out;
+    padding: 0 20px;
+  }
+
+  .open {
+    left: 0;
+  }
+
+  .menu {
+    display: block;
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    z-index: 1100;
+    background: white;
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+  }
+  .logo{
+    margin-top: 45px;
+  }
+  .list {
+    display: block;
+  }
+
+  .setting {
+    display: flex;
+  }
+}
+
+@media screen  and (min-width:400px ) and (max-width: 768px){
   .sidebar {
     position: fixed;
     top: 0;
