--- a/src/components/DashboardMainContent/CalendarView/CalenderView.module.css
+++ b/src/components/DashboardMainContent/CalendarView/CalenderView.module.css
@@ -12,6 +12,7 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 16px;
+      padding: 10px;
   }
   
   .title {
