--- a/src/App.css
+++ b/src/App.css
@@ -63,8 +63,7 @@
       }
     
       .sidebar,
-      .overview,
-      .rightPanel {
+      .overview{
         width: 100%;
         height: auto;
         margin: 10px;
