--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,8 @@
       }
     
       .sidebar,
-      .overview{
+      .overview,
+    .rightPanel{
         width: 100%;
         height: auto;
         margin: 10px;
